HTML background added
Admiral Ackbar givena  blue background

--- a/hello-world.html
+++ b/hello-world.html
@@ -4,5 +4,15 @@
 
 <img src="http://vignette2.wikia.nocookie.net/fantendo/images/9/95/Admiral-ackbar.jpg/revision/latest?cb=20150311110119">
 
+<style>
+
+body {
+
+	background-color:blue
+
+}
+
+<style>
+
 </body>
 </html>
